--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,60 +5,49 @@ on:
     branches:
       - "prod"
 
-env:
-	VITE_API: api
-	VITE_IPINFO_TOKEN: 8945ef7bd33dd1
-	VITE_IMAGES_URL: /api/images
-
 jobs:
   build:
-    build: Build
     runs-on: ubuntu-latest
-    environment: production
-
-		strategy:
-			matrix:
-				node-version: [16.x]
+    strategy:
+      matrix:
+        node: [16]
 
     steps:
-    - name: Checkout
-      uses: actions/checkout@v3
-		
-		- name: Use Node.js ${{ matrix.node-version }}
-			uses: actions/setup-node@v1
-			with:
-				node-version: ${{ matrix.node-version }}
+    - run: echo 'hellow'
 
-		- run: npm install --legacy-peer-deps
-		- run: npm run build
-
-		- name: Upload artifact in order to deploy
-			uses: actions/artifact@v2
-			with:
-				name: production-files
-				path: ./build
-	
-	deploy-prod:
-		name: Deploy 
-		runs-on: ubuntu-latest
-		needs: build
-
-		steps:
-			- name: Download artifact
-				uses: actions/download-artifact@v2
-				with:
-					name: production-files
-					path: ./build
-
-			- name: Send to server
-				runs: scp -i ${{ secrets.SSH_PRIVATE_KEY }} -r ./build/* root@${{ secrets.HOST }}:/var/www/realestateapi.rafhaelmarques.me/
-
-			- name: Restart Nginx
-				uses: appleboy/ssh-action@master
+    - name: Use Node.js ${{ matrix.node }}
+      uses: actions/setup-node@v3
       with:
-        host: ${{ secrets.HOST }}
-        username: root
-        key: ${{ secrets.SSH_PRIVATE_KEY }}
-        script: systemctl restart nginx
+       node-version: ${{ matrix.node-version }}
 
-		
+    - run: npm install --legacy-peer-deps
+    - run: npm run build
+
+    - name: Upload artifact in order to deploy
+      uses: actions/artifact@v2
+      with:
+       name: production-files
+       path: ./build
+
+  deploy-prod:
+    name: Deploy 
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+    - name: Download artifact
+      uses: actions/download-artifact@v2
+      with:
+       name: production-files
+       path: ./build
+
+    - name: Send to server
+      run: scp -i ${{ secrets.SSH_PRIVATE_KEY }} -r ./build/* root@${{ secrets.HOST }}:/var/www/realestateapi.rafhaelmarques.me/
+
+    - name: Restart Nginx
+      uses: appleboy/ssh-action@master
+      with:
+       host: ${{ secrets.HOST }}
+       username: root
+       key: ${{ secrets.SSH_PRIVATE_KEY }}
+       script: systemctl restart nginx
